# CodeRED-Astra

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  QUICK_REFERENCE.md  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  postcss.config.js  setup-check.ps1  vite.config.js
.github/workflows/: build-and-deploy-fallback.yml  build-and-deploy.yml
rust-engine/: Cargo.toml  DEMODETAILS.md  Dockerfile  README.md  rust-toolchain.toml
rust-engine/src/: api.rs  db.rs  file_worker.rs  gemini_client.rs  main.rs  models.rs  storage.rs  vector.rs  vector_db.rs  worker.rs
src/: App.jsx  index.css
src/app/: index.jsx
src/components/ui/: ChatHeader.jsx  ChatLayout.jsx  ChatWindow.jsx  MessageInput.jsx
src/features/gemini/: gemini.js
src/styles/: theme.css
web-app/: Dockerfile  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  server.mjs  tailwind.config.js  vite.config.js
web-app/src/: App.jsx  index.css  index.js  main.jsx
web-app/src/app/: index.jsx
web-app/src/components/layouts/: chat-layout.jsx
web-app/src/components/ui/Button/: ActionButton.css  ActionButton.jsx  DeleteButton.jsx  NewChatButton.css  NewChatButton.jsx
web-app/src/components/ui/button/: action-button.jsx  backend-toggle.jsx  delete-button.jsx  down-button.jsx  schematic-button.jsx
web-app/src/components/ui/chat/: chat-header.jsx  chat-window.jsx  message-input.jsx
web-app/src/components/ui/file/: file-list.jsx
web-app/src/config/: markdown.jsx
web-app/src/context/: chat-backend-context.jsx
web-app/src/features/gemini/: gemini.js
web-app/src/lib/: api.js
