# rust-engine/Cargo.toml

[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7" # Switched from unmaintained 'dotenv'
anyhow = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
async-trait = "0.1"
tokio-util = "0.7"
futures-util = "0.3"
lazy_static = "1.4"
bytes = "1.4"
pdf-extract = "0.6"
base64 = "0.22"
